[package]
name = "atlas"
version = "0.1.0"
description = "simple texture atlas generator"
authors = ["ansdor <me@ansdor.com"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
image = "0.24"
indicatif = "0.17"
serde_json = "1.0"
