[package]
name = "atlas"
version = "0.1.1"
description = "simple texture atlas generator"
authors = ["ansdor <me@ansdor.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
image = {version = "0.25", features = ["png"] }
indicatif = "0.17"
serde_json = "1.0"
human-sort = "0.2"
