[package]
name = "atlas"
version = "1.0.0"
description = "texture atlas creator & utilities"
authors = ["ansdor <me@ansdor.com>"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", features = ["png"] }
indicatif = "0.17"
serde_json = "1.0"
human-sort = "0.2"
kiddo = "5"